6_adding_auth_app/authz.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: workshop-demo
spec:
  selector:
    matchLabels:
      app: workshop-demo
  jwtRules:
    - issuer: "app"
      jwksUri: "http://workshop-demo.default:3000/.well-known/jwks.json"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: workshop-demo
spec:
  selector:
    matchLabels:
      app: workshop-demo
  action: ALLOW
  rules:
    - to:
        - operation:
            paths: ["/login", "/.well-known/jwks.json"]
    - to:
        - operation:
            paths: ["/health"]
      from:
        - source:
            requestPrincipals: ["*"]
